po: update po/pt_BR/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/pledge.po
+++ b/po/pt_BR/pledge.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -52,11 +52,11 @@ msgid "Pledge Payment Status"
 msgstr "Situação da Promessa de pagamento"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
+msgid "%1 - due on %2 (overdue)"
 msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
+msgid "%1 - due on %2"
 msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
@@ -81,14 +81,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Intervalo de Frequências de promessa"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Status da Promessa  %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Status da Promessa de pagamento %1 "
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "O Compromisso é um Teste"
 
@@ -99,6 +91,10 @@ msgstr ""
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Página Financeira - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -148,10 +144,6 @@ msgstr ""
 msgid "Pledge Cancelled Date"
 msgstr ""
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr ""
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Número máximo de lembretes"
@@ -190,12 +182,12 @@ msgid "Reminders Sent"
 msgstr "Lembretes Enviados"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Editar Programação da Promessa de Pagamento"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "O Agendamento do Pagamento do Compromisso foi atualizado."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Promessa de"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -302,6 +294,10 @@ msgid "Pledger Name or Email"
 msgstr "Nome ou E-mail do contribuinte"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr ""
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Localizar Compromissos"
 
@@ -310,12 +306,10 @@ msgid "Delete Pledges"
 msgstr "Excluir Promessas"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Promessa(s) excluída(s): %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Total de Promessa(s) Selecionados (s): %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -324,6 +318,30 @@ msgstr "Imprimir lista de Promessas"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Mecanismo de promessa do CiviCRM "
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr ""
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr ""
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -341,11 +359,11 @@ msgid ""
 "pledge payments."
 msgstr "Cancelando esta promessa também irá cancelar quaisquer promessas de pagamento programadas (não concluídas)."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Ver Promessa"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Editar Promessa"
 
@@ -353,7 +371,7 @@ msgstr "Editar Promessa"
 msgid "Cancel Pledge"
 msgstr "Cancelar Promessa"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Excluir Promessa"
 
@@ -374,20 +392,12 @@ msgid "Pledge Search"
 msgstr "Pesquisa de Promessa"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Imprimir Promessas"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Exportar Promessas"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Editar Programação da Promessa de Pagamento"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Data prevista para o pagamento da promessa."
+msgid "Adjust scheduled amount"
+msgstr ""
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -396,10 +406,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Você não será capaz de enviar um aviso para esta promessa, pois não existe um endereço de e-mail registrado para este contato. Se você quer uma confirmação para ser enviada quando este compromisso for registrado, clique em Cancelar e, em seguida, clique em Editar na guia Resumo para adicionar um endereço de e-mail antes de gravar a promessa."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Nova promessa"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -416,6 +422,10 @@ msgid ""
 msgstr "Considere cancelar o compromisso se deseja manter uma trilha de auditoria e evitar perda de dados de pagamento. Para definir o status de promessa como cancelada e cancelar qualquer compromisso pagamentos ainda não pago, clique em Cancelar neste formulário. Em seguida, clique no link mais &gt; a partir da listagem de promessas e selecione a ação Cancelar."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Promessa de"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -423,6 +433,7 @@ msgid ""
 msgstr "O Compromisso total foi alterado devido a ajustes de pagamento. Montante original da promessa foi de %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "parcelas de"
 
@@ -445,10 +456,6 @@ msgstr "Data de pagamento da primeira promessa."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Um e-mail automático de confirmação da promessa de %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Um e-mail automático de confirmação da promessa de"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -474,20 +481,12 @@ msgstr "Promessas são \"pendente\" até que o primeiro pagamento seja recebido.
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Clique em OK para salvar este registro de promessa e enviar um aviso para %1 agora"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr ""
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Compromisso assumido por"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "parcelas de"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "cada"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -514,10 +513,6 @@ msgid "Payments Ended Date"
 msgstr "Pagamentos Data Fim"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Nenhum resultado de promessa foi encontrado."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -530,8 +525,16 @@ msgid ""
 msgstr "Se você está procurando dentro de um intervalo de data ou valor, tentar uma ampla gama de valores."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Clique para ver mais de %1 das promessas de pagamentos."
+msgid "Click arrow to view pledge payments."
+msgstr "Clique na seta para ver promessas de pagamentos."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Mostrar pagamentos"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Ocultar pagamentos"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -551,10 +554,6 @@ msgstr "Para ser pago"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Data de Início"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Promessa feita em"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -605,20 +604,12 @@ msgid "Amount Paid"
 msgstr "Valor pago"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Ver Pagamento</a>"
+msgid "Credit Card Payment"
+msgstr "Pagamento com Cartão de Crédito"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Registro de pagamento (cheque, dinheiro, TEF ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Submeter no cartão de crédito</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Editar Pagamento Programado</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Editar Programação de Pagamento"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -638,9 +629,10 @@ msgstr "Para quem as lembranças serão enviadas:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "O administrador do site deve configurar o script que atualiza o status de promessa de pagamento e envia os lembretes (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "O administrador do site deve configurar a tarefa agendada (Administração > Configurações do Sistema > Tarefas Agendadas) que atualiza as situações de promessas de pagamentos e envia os lembretes."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -660,13 +652,17 @@ msgstr "Promessas recebidas %1 desde o início."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Clique em <a href='%1'>Adicionar Promessa</a> para gravar uma nova promessa deste contato."
+msgstr "Clique em <a %1>Adicionar Promessa</a> para gravar uma nova promessa para este contato."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Nenhuma promessa foi registradas a partir deste contato."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -792,94 +788,38 @@ msgstr "Obrigado pelo seu apoio!"
 msgid "Pledge Payment Reminder"
 msgstr "Lembrete de pagamento"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
 msgstr ""
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr ""
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Promessas Excluídas: %1 (Total Selecionado: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr ""
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Clique na seta para ver promessas de pagamentos."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Mostrar pagamentos"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Ocultar pagamentos"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Pagamento com Cartão de Crédito"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Editar Programação de Pagamento"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "O administrador do site deve configurar a tarefa agendada (Administração > Configurações do Sistema > Tarefas Agendadas) que atualiza as situações de promessas de pagamentos e envia os lembretes."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Clique em <a %1>Adicionar Promessa</a> para gravar uma nova promessa para este contato."
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
 msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
 msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
 msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
 msgstr ""
