po: update po/pt_PT/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/menu.po
+++ b/po/pt_PT/menu.po
@@ -17,9 +17,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-30 09:59+0000\n"
-"Last-Translator: João Cunha <cunha.joao@outlook.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,8 +136,8 @@ msgid "Case Activity"
 msgstr "Actividade do Processo"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Relatório do Processo"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -156,8 +156,8 @@ msgid "Assign to Another Client"
 msgstr "Atribuir a Outro Cliente"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Criar Atividade para o Processo"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -181,10 +181,6 @@ msgstr "Estado do Processo"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Encontro Médias"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Mudar estado de Actividade"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -259,6 +255,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Tipos financeiros"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Novo Pagamento"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -276,9 +276,15 @@ msgstr "Cartões de crédito aceites"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contribuições"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Contribuições Recorrentes"
@@ -329,6 +335,23 @@ msgstr ""
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Ver Pagamento"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Fatura em PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Fatura por Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -482,6 +505,11 @@ msgstr "Preferências de Busca"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Preferências de Data"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu de Navegação"
 
@@ -515,10 +543,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Lembretes de Agendamento"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Nunca deve ser visualizado"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -536,6 +560,11 @@ msgstr "Imprimir Página, Formato (PDF) "
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Opções do Estilo de Comunicações"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formatos de Email de Saudação"
 
@@ -549,9 +578,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formatos de Endereço"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Línguas, Moeda, Localização"
+msgid "Languages, Currency, Locations"
+msgstr "Idiomas, Moeda, Localização"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -702,10 +732,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrar CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Valores de Opções"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Conjuntos de Preços"
 
@@ -773,10 +799,6 @@ msgstr "Construtor de Pesquisas"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Pesquisas personalizadas"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Pesquisa Simples"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -868,6 +890,10 @@ msgid "CiviCRM Blog"
 msgstr "Blog CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Processo do Painel de Resumo"
 
@@ -922,6 +948,10 @@ msgid "Import Activities"
 msgstr "Importar Actividades"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Actualizar CiviCRM"
 
@@ -958,12 +988,16 @@ msgid "Browse Uploaded files"
 msgstr "Procurar e enviar ficheiros"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Apagar ficheiro"
+msgid "Delete File"
+msgstr "Apagar Ficheiro"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Terminar Sessão"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -977,6 +1011,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Editor de Perfil"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Confirmar datas"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1073,6 +1111,10 @@ msgid "Event Online Registration"
 msgstr "Registo Online do Evento"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Entrada de Conferência"
 
@@ -1106,6 +1148,10 @@ msgstr "Remover do Carrinho"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Ver Carrinho"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1160,8 +1206,8 @@ msgid "Resubscribe"
 msgstr "Voltar a Subscrever"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Abandonar"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1296,6 +1342,11 @@ msgstr "Listagem de Relatórios"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Notícias CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1434,6 +1485,16 @@ msgstr "Encontrar SMS em massa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Relatórios dos Membros"
 
@@ -1539,11 +1600,6 @@ msgstr "Localização"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Idiomas, Moeda, Localização"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Opções de Idioma preferido"
 
@@ -1561,6 +1617,11 @@ msgstr "Permissões (Controle de Acesso)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Configurações do Sistema"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1629,6 +1690,11 @@ msgstr "Doação Civil"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMembro"
 
@@ -1639,8 +1705,13 @@ msgstr "Todos Relatórios"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Ajuda"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1649,18 +1720,43 @@ msgstr "Documentação"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Fórum de Comunidade"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participante"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Sobre"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Desenvolvedor"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Explorador API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Documentos do Desenvolvedor"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1887,6 +1983,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Providencia informações acerca do estado das contribuições recursivas"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Sumário de Membros"
 
@@ -2056,144 +2157,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr ""
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "Novo Pagamento"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Ver Pagamento"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Opções do Estilo de Comunicações"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
+msgid "Configure CKEditor"
 msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Desenvolvedor"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "Explorador API"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Documentos do Desenvolvedor"
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Fatura em PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Fatura por Email"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Preferências de Data"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Apagar Ficheiro"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Confirmar datas"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Manage A/B Tests"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Support"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Providencia informações acerca do estado das contribuições recursivas"
