po: update po/pt_PT/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_PT/countries.po
+++ b/po/pt_PT/countries.po
@@ -5,7 +5,7 @@
 # Translators:
 # Carlos Sousa <carlossoaresdesousa@gmail.com>, 2012
 # Nana, 2012
-# David Nascimento <david@davidnascimento.com>, 2015
+# EVERY <david@davidnascimento.com>, 2015
 # split, 2013
 # Paulo Pereira <pauloizidoro@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-23 00:36+0000\n"
-"Last-Translator: David Nascimento <david@davidnascimento.com>\n"
+"POT-Creation-Date: 2016-05-08 17:05-0400\n"
+"PO-Revision-Date: 2016-05-08 22:32+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Portuguese (http://www.transifex.com/civicrm/civicrm/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
