--- a/po/ru_RU/countries.po
+++ b/po/ru_RU/countries.po
@@ -5,7 +5,10 @@
 # Translators:
 # Armen <remontall@mail.ru>, 2012
 # Владимир Александрович <dva-777@yandex.ru>, 2013
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # semden <mail@semden.info>, 2012
+# Mattias A, 2015
+# Mattias OKFSE, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Armen <remontall@mail.ru>, 2012
 # semden <mail@semden.info>, 2012
@@ -13,8 +16,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-08 17:05-0400\n"
+"PO-Revision-Date: 2016-05-08 22:32+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
