--- a/po/ru_RU/install.po
+++ b/po/ru_RU/install.po
@@ -3,20 +3,28 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Dmitry Karasev <dkarasev@deti-bela.ru>, 2015
+# bb16390 <bb16390@gmail.com>, 2014
+# Dmitry Karasev <dkarasev@gmail.com>, 2015
+# Dmitry Karasev <dkarasev@gmail.com>, 2015
+# Hotellook, 2014
+# shizhao <shizhao@gmail.com>, 2015
+# Spiros Georgaras <sng@hellug.gr>, 2016
+# Stang . <Cosine02@outlook.com>, 2016
 # Фёдор Ходьков <fkhodkov@gmail.com>, 2014
+# 文浩坚 <never.min@gmail.com>, 2015
+# 汇民 王 <whuim@163.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:49-0400\n"
-"PO-Revision-Date: 2015-03-22 12:13+0000\n"
-"Last-Translator: Dmitry Karasev <dkarasev@deti-bela.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/civicrm/language/ru/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
@@ -124,6 +132,16 @@ msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
 msgstr "Значение параметра auto_increment_increment больше 1 не поддерживается в текущей версии. Пожалуйста, обратитесь к описанию проблемы CRM-7923 для дополнительной информации."
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr ""
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
