po: update po/ru_RU/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ru_RU/batch.po
+++ b/po/ru_RU/batch.po
@@ -4,21 +4,22 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Dmitry Karasev <dkarasev@gmail.com>, 2015
+# Dmitry Karasev <dkarasev@gmail.com>, 2015
 # semden <mail@semden.info>, 2012
 # semden <mail@semden.info>, 2012
 # Val Ye <caesar.ye@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-04-13 20:14+0000\n"
-"Last-Translator: Dmitry Karasev <dkarasev@gmail.com>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/civicrm/language/ru/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
@@ -35,6 +36,10 @@ msgstr "Посмотреть/Добавить транзакцию пакета"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Открыть заново пакет"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -61,12 +66,52 @@ msgid "No export format selected."
 msgstr "Выбран не экспортируемый формат"
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Дата экспорта"
+msgid "Batch ID"
+msgstr "ID па"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Количество пунктов"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Описание пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Автор пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Дата создания пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Последнее изменение пакета сделано"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Дата изменения пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Смарт группа пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Всего в пакете"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Количество пунктов в пакете"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Платёжный инструмент пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Дата экспорта пакета"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Пакетная запись"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -85,6 +130,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Пакетный ввод по членству"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Пакетный ввод по обещанным платежам"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Обработать пакет, несмотря на несоответствие?"
 
@@ -93,16 +142,16 @@ msgid "Validate & Process the Batch"
 msgstr "Проверить и обработать пакет"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Некоторые поля были исключены."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Полная сумма обещания должна быть больще нуля."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Вид членства - обязательное поле."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "Вы не можете записать два платежа для одинаковых обещаний в одном пакете"
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -151,6 +200,10 @@ msgstr "Ожидаемая сумма"
 msgid "Total amount entered"
 msgstr "Введенная сумма"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Открытые обещания (Дата до - Сумма)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr " Данные партии"
@@ -172,65 +225,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Ни одной группы не было создано для данного сайта."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID па"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Заголовок пакета"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Описание пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Автор пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Дата создания пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Последнее изменение пакета сделано"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Дата изменения пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Смарт группа пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Всего в пакете"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Количество пунктов в пакете"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Платёжный инструмент пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Дата экспорта пакета"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Пакетная запись"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Пакетный ввод по обещанным платежам"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "Вы не можете записать два платежа для одинаковых обещаний в одном пакете"
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Открытые обещания (Дата до - Сумма)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
