--- a/po/ru_RU/menu.po
+++ b/po/ru_RU/menu.po
@@ -19,8 +19,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -138,8 +138,8 @@ msgid "Case Activity"
 msgstr "Действия по делу"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Отчёт по делу"
+msgid "Case Activity Audit"
+msgstr "Аудит действий по делу"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -158,8 +158,8 @@ msgid "Assign to Another Client"
 msgstr "Назначить другому клиенту"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Строить действия по делу"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -183,10 +183,6 @@ msgstr "Статусы дел"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Среда общения"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Изменить статус активности"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -261,6 +257,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "тип финансов"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Новый платёж"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -278,9 +278,15 @@ msgstr "Принимаемые кредитные карты"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "тип льготного кредита"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Взносы"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Регулярные взносы"
@@ -331,6 +337,23 @@ msgstr "Учтенные пакеты"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Экспорт учтенных пакетов"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Смотреть платеж"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Настройки Компонентов CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Счет в формате PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Отправить счет по Email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -484,6 +507,11 @@ msgstr "Настроить поиск"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Настройки Даты"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Главное меню"
 
@@ -517,10 +545,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Планируемые напоминания"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Никогда не показывать это"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -538,6 +562,11 @@ msgstr "Формат печати (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Коммуникационные настройки"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Форматы приветствия для email"
 
@@ -551,9 +580,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Форматы адресатов"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Языки, валюта, географическое положение"
+msgid "Languages, Currency, Locations"
+msgstr "Языки, валюта, географические названия"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -704,10 +734,6 @@ msgid "Administer CiviCRM"
 msgstr "Управление CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Значения опций"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Наборы цен"
 
@@ -775,10 +801,6 @@ msgstr "Конструктор поиска"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Настраиваемые поиски"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Простой поиск"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -870,6 +892,10 @@ msgid "CiviCRM Blog"
 msgstr "Блог CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Подпанель дела"
 
@@ -924,6 +950,10 @@ msgid "Import Activities"
 msgstr "Импорт действий"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Импорт Multi-значений  Пользовательских данных"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Обновить CiviCRM"
 
@@ -960,12 +990,16 @@ msgid "Browse Uploaded files"
 msgstr "Просмотреть закачанные файлы"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Удалить файл"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Выйти"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -979,6 +1013,10 @@ msgstr "QЮнит"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Редактор профиля"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Подтвердить даты"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1075,6 +1113,10 @@ msgid "Event Online Registration"
 msgstr "Онлайн-регистрация мероприятия"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Повторить событие"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Заседания конференции"
 
@@ -1108,6 +1150,10 @@ msgstr "Удалить из корзины"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Посмотреть корзину"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Изменение способа регистрации"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1162,7 +1208,7 @@ msgid "Resubscribe"
 msgstr "Повторно подписаться"
 
 msgctxt "menu"
-msgid "Optout"
+msgid "Opt-out"
 msgstr "Отказ"
 
 msgctxt "menu"
@@ -1301,6 +1347,11 @@ msgstr "Новости CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "My Cases"
 msgstr "Мои дела"
 
@@ -1436,6 +1487,16 @@ msgstr "Найти рассылку SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Новый A/B тест"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Управление A/B тестами"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Отчеты по членствам"
 
@@ -1541,11 +1602,6 @@ msgstr "Локализация"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Языки, валюта, географические названия"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Параметры предпочитаемого языка"
 
@@ -1563,6 +1619,11 @@ msgstr "Права (контроль доступа)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Настройка системы"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1631,6 +1692,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Статус гранта"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1641,8 +1707,13 @@ msgstr "Все отчеты"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Справка"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1651,18 +1722,43 @@ msgstr "Документация"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Форумы сообщества"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Участвовать"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "О программе"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Разработчик"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Обозреватель"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Разработчик документации"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1889,6 +1985,11 @@ msgstr "Содержит подробную информацию по сделк
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Отображает информацию о статусе регулярных взносов"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Отчет о членствах (обобщенный)"
 
@@ -2058,144 +2159,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Детализированный отчет по опросам общественного мнения, сбору телефонных номеров, составлении опросных листов и другим исследованиям."
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Аудит действий по делу"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "Новый платёж"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "тип льготного кредита"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Смотреть платеж"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Коммуникационные настройки"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Импорт Multi-значений  Пользовательских данных"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Изменение способа регистрации"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "Статус гранта"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "Разработчик"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Обозреватель"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Разработчик документации"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Настройки Компонентов CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Счет в формате PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Отправить счет по Email"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Настройки Даты"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Удалить файл"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Подтвердить даты"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Повторить событие"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Отказ"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Новый A/B тест"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Управление A/B тестами"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About CiviCRM"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Register your site"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Join CiviCRM"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Отображает информацию о статусе регулярных взносов"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
