--- a/po/ru_RU/queue.po
+++ b/po/ru_RU/queue.po
@@ -1,22 +1,22 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-#   <mail@semden.info>, 2012.
+# semden <mail@semden.info>, 2012
+# semden <mail@semden.info>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-11-15 19:42+0000\n"
-"Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/civicrm/language/ru/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
@@ -37,3 +37,7 @@ msgstr "Данные элемента очереди."
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Механизм очередей"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
