--- a/po/si/queue.po
+++ b/po/si/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2014
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -6,9 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2014-08-27 13:25-0400\n"
-"PO-Revision-Date: 2012-07-24 20:42+0000\n"
-"Language-Team: Sinhala (http://www.transifex.com/projects/p/civicrm/language/si/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Sinhala (http://www.transifex.com/civicrm/civicrm/language/si/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -33,4 +34,8 @@ msgstr ""
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
+msgstr ""
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
 msgstr ""
